fix: split canvas for expandables

--- a/src/stories/expandables.stories.mdx
+++ b/src/stories/expandables.stories.mdx
@@ -87,7 +87,10 @@ export const Template = (args, { argTypes }) => ({
   <Story name="Expandables" args={{variant: 'primary', isExpanded: false, isHovered: false}}>
     {Template.bind({})}
   </Story>
-    <Story name="Summary/Details">
+</Canvas>
+
+<Canvas>
+  <Story name="Summary/Details">
     {{
       template: `
       <details>
