feat: add person card

--- a/src/stories/cards.stories.mdx
+++ b/src/stories/cards.stories.mdx
@@ -4,7 +4,7 @@ import DCard from '../components/d-card.vue';
 import { COLOR_VARIANTS, SIZES } from '../utils';
 
 <Meta 
-  title="Elements/Card" 
+  title="Elements/Cards/Card" 
   component={DCard} 
   argTypes={{
     variant: { control: { type: 'select', options: COLOR_VARIANTS } },
