test: refactor, organize tests, add fireEvents to tests
also refactors components to use base mixin

--- a/src/stories/expandables.stories.mdx
+++ b/src/stories/expandables.stories.mdx
@@ -11,7 +11,7 @@ import { COLOR_VARIANTS } from '../utils';
 />
 
 # Expandables
-<ArgsTable story="Expandable" />
+<ArgsTable story="Expandables" />
 
 # DExpandable component
 ```html
