--- a/src/stories/banner.stories.mdx
+++ b/src/stories/banner.stories.mdx
@@ -8,7 +8,7 @@ import { COLOR_VARIANTS } from '../utils';
     component={DBanner} 
     argTypes={{
         variant: { control: { type: 'select', options: COLOR_VARIANTS } },
-        tagVariant: { control: { type: 'select', options: COLOR_VARIANTS } },
+        accent: { control: { type: 'select', options: COLOR_VARIANTS } },
         tagSize: { control: { type: 'select', options: ['normal', 'medium', 'large'] } }
     }}
 />
@@ -25,11 +25,11 @@ import { COLOR_VARIANTS } from '../utils';
 export const Template = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { DBanner },
-  template: `<DBanner :text='text' :tag='tag' :variant='variant' :tagVariant='tagVariant' :tagSize='tagSize'/>`
+  template: `<DBanner :text='text' :tag='tag' :variant='variant' :accent='accent' :tagSize='tagSize'/>`
 });
 
 <Canvas >
-    <Story name='Banner' args={{variant: 'primary', tag: 'Disco Design System', text: 'Powering CCV\'s Web Apps', tagVariant: 'danger', tagSize: 'normal'}}>
+    <Story name='Banner' args={{variant: 'primary', tag: 'Disco Design System', text: 'Powering CCV\'s Web Apps', accent: 'danger', tagSize: 'normal'}}>
         {Template.bind({})}
     </Story>
 </Canvas>
@@ -37,7 +37,7 @@ export const Template = (args, { argTypes }) => ({
 export const TemplateIcon = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { DIcon, DBanner },
-  template: `<DBanner :text='text' :tag='tag' :variant='variant' :tagVariant='tagVariant' :tagSize='tagSize'>
+  template: `<DBanner :text='text' :tag='tag' :variant='variant' :accent='accent' :tagSize='tagSize'>
               <template slot="icon">
                 <DIcon name="info"/>
               </template>
@@ -45,7 +45,7 @@ export const TemplateIcon = (args, { argTypes }) => ({
 });
 
 <Canvas >
-    <Story name='Banner Icon' args={{variant: 'primary', tag: 'Disco Design System', text: 'Powering CCV\'s Web Apps', tagVariant: 'danger', tagSize: 'normal'}}>
+    <Story name='Banner Icon' args={{variant: 'primary', tag: 'Disco Design System', text: 'Powering CCV\'s Web Apps', accent: 'danger', tagSize: 'normal'}}>
         {TemplateIcon.bind({})}
     </Story>
 </Canvas>
