--- a/src/stories/banner.stories.mdx
+++ b/src/stories/banner.stories.mdx
@@ -25,7 +25,7 @@ import { COLOR_VARIANTS } from '../utils';
 export const Template = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { DBanner },
-  template: `<DBanner :text='text' :variant='variant' :accent='accent' :tagSize='tagSize'/>`
+  template: `<div><DBanner :text='text' :variant='variant' :accent='accent' :tagSize='tagSize'/><div style="height: 200px; width: 100vw;" class="has-background-link"></div></div>`
 });
 
 <Canvas >
