fix: add slot to hero, fix controls in nav story

--- a/src/stories/footer.stories.mdx
+++ b/src/stories/footer.stories.mdx
@@ -173,7 +173,7 @@ export const Template = (args, { argTypes }) => ({
 });
 
 <Canvas >
-    <Story name='Footer' args={{variant: 'white'}}>
+    <Story name='Footer' args={{variant: 'light'}}>
         {Template.bind({})}
     </Story>
 </Canvas>
